# cowork

./: .easignore  .env.example  .gitignore  .gitmodules  .mcp.json  .prettierignore  BUILD_REFERENCE.md  Dockerfile  LICENSE  Makefile  README.md  babel.config.js  chromatic.config.json  codecov.yml  components.json  dev-app-update.yml  docker-compose.yml  eslint.config.mjs  flake.nix  fmt.mk  index.html  jest.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  terminal.html  tsconfig.json  vite.config.ts
.github/: zizmor.yml
.storybook/: main.ts  preview.tsx
.unix/: init  tool_post
mobile/: .easignore  .gitignore  app.config.js  app.json  babel.config.js  eas.json  metro.config.js  package.json  tsconfig.json
public/: manifest.json  service-worker.js
resources/inference/python/: pyproject.toml  worker.py
resources/inference/python/backends/: __init__.py  base.py  cuda_utils.py  llamacpp_backend.py  mlx_backend.py  mlx_distributed_backend.py  pipeline_backend.py
resources/inference/python/models/: loader.py
scripts/: build-and-serve.js  build-main-watch.js  bump_tag.sh  check-bench-agent.sh  check-code-docs-links.sh  check_eager_imports.sh  check_pr_reviews.sh  dev-desktop-sandbox.ts  dev-server-sandbox.ts  edit_issue_body.ts  extract_pr_logs.sh  familiarize.sh  fmt.sh  gen_builtin_skills.ts  gen_docs.ts  generate-builtin-skills.sh  generate-icons.ts  generate-npm-shrinkwrap.sh  generate-version.sh  lint.sh  mcp-smoke-test.sh  mdbook-shiki.ts  pin-actions.sh  postinstall.sh  release.sh  sandboxUtils.ts  smoke-test.sh  (+9 more)
(+1147 files in other folders)
